# libncftp

Strn/: Strn.sln  Strn.vcproj  tester.c
Strn/Strn.xcodeproj/: project.pbxproj
Strn/Strn.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
doc/: CHANGELOG.txt  LICENSE.txt  README-MinGW32.txt  README.txt  ftp_overview.html  libncftp.html  manifest.txt
libncftp/: LibNcFTP.sln  LibNcFTP.vcproj  LibNcFTP_ALL.sln  config.h.in  configure  configure.in  mksrctar.sh
libncftp/libncftp.xcodeproj/: project.pbxproj
libncftp/libncftp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libncftp/samples/minincftp/: Makefile.in  minincftp.c  minincftp.sln  minincftp.vcproj
libncftp/samples/misc/: Makefile.in  codepw.c  getwelcome.c  ncftpgetbytes.c  ncftpgettomem.c  pncftp.c  unlstest.c
libncftp/samples/monkey/: Makefile.in  monkey.c  monkey.dsp  monkey.dsw  monkey.sln  monkey.vcproj  monkeys.c
libncftp/samples/ncftpftw/: Makefile.in  ncftpftw.c  ncftpftw.dsp  ncftpftw.dsw  ncftpftw.sln  ncftpftw.vcproj
libncftp/samples/ncftpget/: Makefile.in  gpshare.c  gpshare.h  ncftpget.1  ncftpget.c  ncftpget.dsp  ncftpget.sln  ncftpget.vcproj
libncftp/samples/ncftpls/: Makefile.in  ncftpls.1  ncftpls.c  ncftpls.dsp  ncftpls.sln  ncftpls.vcproj
libncftp/samples/ncftpput/: Makefile.in  ncftpput.1  ncftpput.c  ncftpput.dsp  ncftpput.sln  ncftpput.vcproj
libncftp/samples/ncftpsyncput/: Makefile.in  ncftpsyncput.dsp  ncftpsyncput.dsw  ncftpsyncput.sln  ncftpsyncput.vcproj  syncput.c
libncftp/samples/simpleget/: Makefile.in  simpleget.c  simpleget.dsp  simpleget.dsw  simpleget.sln  simpleget.vcproj
sio/: sio.html  sio.sln  sio.vcproj
